--- a/client/src/components/Navigation/Navbar.css
+++ b/client/src/components/Navigation/Navbar.css
@@ -1,11 +1,10 @@
 #nav-bar {
-  display: flex;
-  justify-content: flex-end;
+  display: grid;
+  grid-template-columns: 1fr repeat(2, 10%) 14% 10%;
   padding: 10px; 
   font-size: 24px; 
   text-decoration: none;
   padding: 20px; 
-  padding-right: 50px; 
 }
 
 .pointer {
@@ -14,9 +13,15 @@
 
 .nav_item {
   margin: 20px;
+  justify-self: end;
 }
 
 .text{
   color: black;
   text-decoration: none !important; 
+  
+}
+
+.navbar_logo {
+  padding-left: 3%;
 }
