--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -2,13 +2,20 @@
   background-image: url(steth.jpg);
   background-position: center;
   background-size: cover;
+  /* opacity: 0.7; */
   width: 100%;
   height: 100vh;
-  /* padding-top: 60%; */
 }
 
-.steth {
-  width: 100%;
+.home_intro_text {
+  z-index: -1;
+  padding: 20%;
+  text-align: center;
+}
+
+.home_intro_title{
+  font-size: 70px;
+  font-family: 'Archivo Black', sans-serif;
 }
 
 .home_title{
@@ -22,7 +29,76 @@
 .services_text {
   /* display: flex;
   align-items: center; */
+  text-align: center;
   margin-left: 15%;
   margin-right: 15%;
   margin-bottom: 5%;
 }
+
+.services_container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 5%;
+  margin-bottom: 5%;
+  padding: 5%;
+}
+
+.services_icon1{
+  grid-column: 1;
+  grid-row: 1;
+  justify-self: center;
+}
+
+.services_title1 {
+  grid-column: 1;
+  grid-row: 2;
+  justify-self: center;
+  align-self: center;
+}
+
+.services_description1{
+  grid-column: 1;
+  grid-row: 3;
+  justify-self: center;
+}
+
+.services_icon2{
+  grid-column: 2;
+  grid-row: 1;
+  justify-self: center;
+}
+
+.services_title2 {
+  grid-column: 2;
+  grid-row: 2;
+  justify-self: center;
+  align-self: center;
+}
+
+.services_description2{
+  grid-column: 2;
+  grid-row: 3;
+  justify-self: center;
+}
+
+.services_icon3{
+  grid-column: 3;
+  grid-row: 1;
+  justify-self: center;
+}
+
+.services_title3 {
+  grid-column: 3;
+  grid-row: 2;
+  justify-self: center;
+  align-self: center;
+}
+
+.services_description3{
+  grid-column: 3;
+  grid-row: 3;
+  justify-self: center;
+}
+
+
