--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,4 +1,4 @@
-.home_main_image{
+.home_main_image {
   background-image: url(steth.jpg);
   background-position: center;
   background-size: cover;
@@ -8,97 +8,149 @@
 }
 
 .home_intro_text {
-  z-index: -1;
-  padding: 20%;
   text-align: center;
-}
-
-.home_intro_title{
-  font-size: 70px;
   font-family: 'Archivo Black', sans-serif;
 }
 
-.home_title{
+.home_intro_title {
+  font-size: 80px;
+  padding-top: 13%;
+  color: #9e9e9e;
+}
+
+.home_intro_location {
+  font-size: 40px;
+  padding-top: 1%;
+
+}
+
+.home_intro_description {
+  padding-top: 3%;
+  text-align: center;
+  padding-left: 10%;
+  padding-right: 10%;
+  font-size: 25px;
+}
+
+.home_intro_iso {
+  padding-top: 2%;
+}
+
+.intro_iso {
+  height: 80px;
+}
+
+.home_title {
   display: flex;
   justify-content: center;
   margin-top: 8%;
-  margin-bottom: 3%;
-  font-size: 50px;
+  margin-bottom: 2%;
+  font-size: 70px;
+  font-weight: medium;
+  font-family: 'Yantramanav', sans-serif;
 }
 
-.services_text {
-  /* display: flex;
-  align-items: center; */
-  text-align: center;
-  margin-left: 15%;
-  margin-right: 15%;
-  margin-bottom: 5%;
+.home_title_line {
+  border-bottom: solid;
+  border-width: thin;
+  border-color: #C61B1C;
+  width: 25%;
+  margin: auto;
+  margin-bottom: 2%;
 }
 
 .services_container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 5%;
+  grid-template-columns: repeat(3, 20%);
+  grid-column-gap: 15%;
+  margin-left: 9%;
   margin-bottom: 5%;
   padding: 5%;
+  font-family: 'Yantramanav', sans-serif;
 }
 
-.services_icon1{
-  grid-column: 1;
+.services_sub_container1 {
+  display: grid;
+  grid-template-rows: 30% 40% 50%;
+  background-color: #F1F1F1;
+  padding: 15%;
+  padding-bottom: 35%;
+  border-radius: 2%;
+}
+
+.services_icon1 {
   grid-row: 1;
   justify-self: center;
 }
 
 .services_title1 {
-  grid-column: 1;
   grid-row: 2;
   justify-self: center;
   align-self: center;
+  font-size: 30px;
+  font-weight: bold;
 }
 
-.services_description1{
-  grid-column: 1;
+.services_description1 {
   grid-row: 3;
   justify-self: center;
+  font-size: 20px;
 }
 
-.services_icon2{
-  grid-column: 2;
+.services_sub_container2 {
+  display: grid;
+  grid-template-rows:  30% 40% 50%;
+  background-color: #C61B1C;
+  padding: 15%;
+  padding-bottom: 35%;
+  border-radius: 2%;
+}
+
+.services_icon2 {
   grid-row: 1;
   justify-self: center;
 }
 
 .services_title2 {
-  grid-column: 2;
   grid-row: 2;
   justify-self: center;
   align-self: center;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .services_description2{
-  grid-column: 2;
   grid-row: 3;
   justify-self: center;
+  font-size: 20px;
+}
+
+.services_sub_container3 {
+  display: grid;
+  grid-template-rows: 30% 40% 50%;
+  background-color: #F1F1F1;
+  padding: 15%;
+  padding-bottom: 35%;
+  border-radius: 2%;
 }
 
 .services_icon3{
-  grid-column: 3;
   grid-row: 1;
   justify-self: center;
 }
 
 .services_title3 {
-  grid-column: 3;
   grid-row: 2;
   justify-self: center;
   align-self: center;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .services_description3{
-  grid-column: 3;
   grid-row: 3;
   justify-self: center;
+  font-size: 20px;
 }
 
 .certified_container {
