--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -154,37 +154,71 @@
 }
 
 .certified_container {
-  padding: 8%;
-  background-color: #2773a9;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23f0f5f9' fill-opacity='0.1'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  display: grid;
+  grid-template-columns: auto auto;
+  /* background-color: #2773a9;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23f0f5f9' fill-opacity='0.1'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
   font-family: 'Yantramanav', sans-serif;
 }
 
-.certified_title {
-  font-size: 50px;
-  color: white;
-  padding-bottom: 10px;
-  font-weight: bolder;
+.certified_mini_container1 {
+  display: grid;
+  grid-template-rows: auto auto;
 }
 
-.certified_mini_container {
+.certified_sub_container1 {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: auto auto;
+  background-color: #02306E;
+}
+
+.certified_image1 {
+  width: 100%;
+  height: 400px;
+}
+
+.certified_image2 {
+  width: 500px;
+  height: 400px;
+}
+
+.certified_mini_container2 {
+  display: grid;
+  grid-template-rows: auto auto;
+}
+
+.certified_sub_container2 {
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: #02306E;
+}
+
+.certified_small_square {
+  display: grid;
+  grid-template-rows: auto auto;
+}
+
+.certified_title {
+  /* grid-column: 2; */
+  font-size: 43px;
+  color: #F1F1F1;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 15%;
+}
+
+.certified_iso {
+  width: 20%;
+  padding-left: 40%;
 }
 
 .certified_description {
   font-size: 30px;
-  color: white;
-  padding-bottom: 15px;
-  font-weight: bold;
+  color: #F1F1F1;
+  text-align: center;
+  padding-top: 15%;
 }
-
-.certified_chemist {
-  height: 50%;
-  width: 50%;
-  padding-left: 30%;
-}
-
+/* 
 .certified_button {
   padding: 20px;
   padding-left: 30px;
@@ -196,7 +230,7 @@
   border-radius: 10%;
   background-color: #34A392;
   border-color: #34A392;
-}
+} */
 
 /* .mission_container{
   display: flex;
@@ -234,12 +268,14 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 2%;
+  /* grid-column-gap: 2%; */
   font-family: 'Yantramanav', sans-serif;
+  padding-left: 15%;
+  padding-right: 15%;
 }
 
 .testimonial_title1{
-  grid-column: 2;
+  grid-column: 1;
   grid-row: 1;
   font-size: 20px;
   width: 300px;
@@ -249,6 +285,7 @@
   text-align: center;
   color: black;
   position: relative;
+  border-radius: 5%;
 }
 
 .sb1:before {
@@ -285,13 +322,14 @@
 }
 
 .testimonial_title2{
-  grid-column: 3;
-  grid-row: 1;
+  grid-column: 4;
+  grid-row: 2;
   font-size: 20px;
   color: white;
   width: 300px;
   margin: 50px auto;
-  border: 4px solid darkgray;
+  border: 4px solid #C61B1C;
+  border-radius: 5%;
   padding: 20px;
   text-align: center;
   color: black;
@@ -303,9 +341,9 @@
   width: 0px;
   height: 0px;
   position: absolute;
-  border-left: 10px solid darkgray;
+  border-left: 10px solid #C61B1C;
   border-right: 10px solid transparent;
-  border-top: 10px solid darkgray;
+  border-top: 10px solid #C61B1C;
   border-bottom: 10px solid transparent;
   left: 20px;
   bottom: -23px;
@@ -342,6 +380,7 @@
   text-align: center;
   color: black;
   position: relative;
+  border-radius: 5%;
 }
 
 .sb3:before {
@@ -378,7 +417,7 @@
 
 .testimonial_title4{
   grid-column: 3;
-  grid-row: 2;
+  grid-row: 1;
   font-size: 20px;
   width: 300px;
   margin: 50px auto;
@@ -387,6 +426,7 @@
   text-align: center;
   color: black;
   position: relative;
+  border-radius: 5%;
 }
 
 .sb4:before {
