--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -43,8 +43,8 @@
 .home_title {
   display: flex;
   justify-content: center;
-  margin-top: 5%;
-  margin-bottom: 2%;
+  margin-top: 3%;
+  margin-bottom: 1%;
   font-size: 70px;
   font-weight: medium;
   font-family: 'Yantramanav', sans-serif;
@@ -56,23 +56,19 @@
   border-color: #C61B1C;
   width: 25%;
   margin: auto;
-  margin-bottom: 2%;
 }
 
 .services_container {
   display: grid;
-  grid-template-columns: repeat(3, 20%);
-  grid-column-gap: 15%;
-  margin-left: 9%;
-  margin-bottom: 5%;
-  padding: 5%;
+  grid-template-columns: repeat(4, 20%);
+  margin-left: 18%;
+  margin-bottom: 3%;
   font-family: 'Yantramanav', sans-serif;
 }
 
 .services_sub_container1 {
   display: grid;
   grid-template-rows: 30% 40% 50%;
-  background-color: #F1F1F1;
   padding: 15%;
   padding-bottom: 35%;
   border-radius: 2%;
@@ -81,6 +77,9 @@
 .services_icon1 {
   grid-row: 1;
   justify-self: center;
+  background-color: #F1F1F1;
+  padding: 10%;
+  border-radius: 100%;
 }
 
 .services_title1 {
@@ -100,15 +99,16 @@
 .services_sub_container2 {
   display: grid;
   grid-template-rows:  30% 40% 50%;
-  background-color: #ef5858;
   padding: 15%;
   padding-bottom: 35%;
-  border-radius: 2%;
 }
 
 .services_icon2 {
   grid-row: 1;
   justify-self: center;
+  background-color: #ef5858;
+  padding: 10%;
+  border-radius: 100%;
 }
 
 .services_title2 {
@@ -128,7 +128,6 @@
 .services_sub_container3 {
   display: grid;
   grid-template-rows: 30% 40% 50%;
-  background-color: #F1F1F1;
   padding: 15%;
   padding-bottom: 35%;
   border-radius: 2%;
@@ -137,6 +136,9 @@
 .services_icon3{
   grid-row: 1;
   justify-self: center;
+  padding: 10%;
+  background-color: #F1F1F1;
+  border-radius: 100%;
 }
 
 .services_title3 {
@@ -148,6 +150,36 @@
 }
 
 .services_description3{
+  grid-row: 3;
+  justify-self: center;
+  font-size: 20px;
+}
+
+.services_sub_container4 {
+  display: grid;
+  grid-template-rows: 30% 40% 50%;
+  padding: 15%;
+  padding-bottom: 35%;
+  border-radius: 2%;
+}
+
+.services_icon4{
+  grid-row: 1;
+  justify-self: center;
+  padding: 10%;
+  background-color: #ef5858;
+  border-radius: 100%;
+}
+
+.services_title4 {
+  grid-row: 2;
+  justify-self: center;
+  align-self: center;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.services_description4 {
   grid-row: 3;
   justify-self: center;
   font-size: 20px;
