--- a/client/src/components/Navigation/Navbar.css
+++ b/client/src/components/Navigation/Navbar.css
@@ -1,10 +1,10 @@
 #nav-bar {
-  display: grid;
-  grid-template-columns: 1fr repeat(2, 10%) 14% 10%;
-  padding: 10px; 
+  display: flex;
+  justify-content: center;
   font-size: 24px; 
   text-decoration: none;
-  padding: 20px; 
+  font-family: 'Yantramanav', sans-serif;
+  background-color: #F1F1F1;
 }
 
 .pointer {
@@ -13,15 +13,16 @@
 
 .nav_item {
   margin: 20px;
-  justify-self: end;
+  align-self: center;
 }
 
 .text{
   color: black;
   text-decoration: none !important; 
-  
 }
 
 .navbar_logo {
+  cursor: pointer;
   padding-left: 3%;
+  padding-right: 3%;
 }
