--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,8 +1,7 @@
 .home_main_image {
-  background-image: url(steth.jpg);
+  background-image: url(dentist.jpg);
   background-position: center;
   background-size: cover;
-  /* opacity: 0.7; */
   width: 100%;
   height: 100vh;
 }
@@ -15,14 +14,17 @@
 .home_intro_title {
   font-size: 80px;
   padding-top: 13%;
-  color: #9e9e9e;
+  color: black;
 }
 
 .home_intro_location {
   font-size: 40px;
   padding-top: 1%;
-
 }
+
+/* .state_icon {
+
+} */
 
 .home_intro_description {
   padding-top: 3%;
@@ -77,7 +79,7 @@
 .services_icon1 {
   grid-row: 1;
   justify-self: center;
-  background-color: #F1F1F1;
+  background-color: #ccc5c5;
   padding: 10%;
   border-radius: 100%;
 }
@@ -137,7 +139,7 @@
   grid-row: 1;
   justify-self: center;
   padding: 10%;
-  background-color: #F1F1F1;
+  background-color: #ccc5c5;
   border-radius: 100%;
 }
 
@@ -188,8 +190,6 @@
 .certified_container {
   display: grid;
   grid-template-columns: auto auto;
-  /* background-color: #2773a9;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23f0f5f9' fill-opacity='0.1'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
   font-family: 'Yantramanav', sans-serif;
 }
 
@@ -231,7 +231,6 @@
 }
 
 .certified_title {
-  /* grid-column: 2; */
   font-size: 43px;
   color: #F1F1F1;
   font-weight: bold;
@@ -264,27 +263,6 @@
   border-color: #34A392;
 } */
 
-/* .mission_container{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-content: center;
-  margin: 5%;
-  font-family: 'Yantramanav', sans-serif;
-}
-
-.mission_title {
-  font-size: 40px;
-}
-
-.mission_description {
-  font-size: 25px;
-}
-
-.mission_secure {
-  background-color: #34A392;
-  padding: 20px;
-} */
 
 .testimonial_title{
   display: flex;
