--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -1,13 +1,13 @@
 form{
   display: grid;
-  grid-template-rows: repeat(6, 1fr);
-  padding: 5%;
+  grid-template-rows: repeat(4, 20%) 50% 20%;
+  padding-top: 5%;
   font-size: 25px;
 }
 
-.form-group {
+/* .form-group {
   padding: 3%;
-}
+} */
 
 #name {
   font-size: 20px;
@@ -17,23 +17,20 @@ form{
 
 #textarea {
   width: 54%;
-  height: 140%;
+  height: 90%;
 }
 
-.btn-toolbar {
-  padding: 3%;
-}
 
 .btn {
   padding: 3%;
-  width: 45%;
+  width: 30%;
   grid-row: 6;
   align-self: center;
   font-size: 20px;
   font-weight: bold;
   color: white;
   background-color: #34A392;
-  border-radius: 2%;
+  border-radius: 4%;
   cursor: pointer;
 }
 
