--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,5 +1,5 @@
 .home_main_image {
-  background-image: url(dentist.jpg);
+  background-image: url(header.jpg);
   background-position: center;
   background-size: cover;
   width: 100%;
@@ -7,14 +7,17 @@
 }
 
 .home_intro_text {
-  text-align: center;
-  font-family: 'Archivo Black', sans-serif;
+  /* text-align: center; */
+  font-family: 'Yantramanav', sans-serif;
+  padding-right: 40%;
+  padding-left: 3%;
 }
 
 .home_intro_title {
   font-size: 80px;
-  padding-top: 13%;
+  padding-top: 20%;
   color: black;
+  font-weight: bold;
 }
 
 .home_intro_location {
@@ -23,19 +26,20 @@
 }
 
 /* .state_icon {
-
+  padding-left: 10%;
 } */
 
 .home_intro_description {
   padding-top: 3%;
-  text-align: center;
-  padding-left: 10%;
-  padding-right: 10%;
+  /* text-align: center; */
+  /* padding-left: 3%;
+  padding-right: 40%; */
   font-size: 25px;
 }
 
 .home_intro_iso {
   padding-top: 2%;
+  
 }
 
 .intro_iso {
@@ -264,6 +268,7 @@
 } */
 
 
+
 .testimonial_title{
   display: flex;
   justify-content: center;
@@ -274,202 +279,6 @@
   font-family: 'Yantramanav', sans-serif;
 }
 
-.testimonial_container{
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  /* grid-column-gap: 2%; */
-  font-family: 'Yantramanav', sans-serif;
-  padding-left: 15%;
-  padding-right: 15%;
-}
-
-.testimonial_title1{
-  grid-column: 1;
-  grid-row: 1;
-  font-size: 20px;
-  width: 300px;
-  margin: 50px auto;
-  border: 4px solid #34A392;
-  padding: 20px;
-  text-align: center;
-  color: black;
-  position: relative;
-  border-radius: 5%;
-}
-
-.sb1:before {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-left: 10px solid #34A392;
-  border-right: 10px solid transparent;
-  border-top: 10px solid #34A392;
-  border-bottom: 10px solid transparent;
-  right: -21px;
-  top: 6px;
-}
-
-.sb1:after {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-left: 7px solid #fff;
-  border-right: 7px solid transparent;
-  border-top: 7px solid #fff;
-  border-bottom: 7px solid transparent;
-  right: -11px;
-  top: 10px;
-}
-
-
-.testimonial_name1 {
-  padding-top: 30px;
-  padding-bottom: 10px;
-  font-weight: bolder;
-}
-
-.testimonial_title2{
-  grid-column: 4;
-  grid-row: 2;
-  font-size: 20px;
-  color: white;
-  width: 300px;
-  margin: 50px auto;
-  border: 4px solid #C61B1C;
-  border-radius: 5%;
-  padding: 20px;
-  text-align: center;
-  color: black;
-  position: relative;
-}
-
-.sb2:before {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-left: 10px solid #C61B1C;
-  border-right: 10px solid transparent;
-  border-top: 10px solid #C61B1C;
-  border-bottom: 10px solid transparent;
-  left: 20px;
-  bottom: -23px;
-}
-
-.sb2:after {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-left: 10px solid #fff;
-  border-right: 10px solid transparent;
-  border-top: 10px solid #fff;
-  border-bottom: 10px solid transparent;
-  left: 24px;
-  bottom: -13px;
-}
-
-.testimonial_name2 {
-  padding-top: 30px;
-  padding-bottom: 10px;
-  font-weight: bolder;
-}
-
-.testimonial_title3{
-  grid-column: 2;
-  grid-row: 2;
-  font-size: 20px;
-  color: white; 
-  width: 300px;
-  margin: 50px auto;
-  border: 4px solid darkgray;
-  padding: 20px;
-  text-align: center;
-  color: black;
-  position: relative;
-  border-radius: 5%;
-}
-
-.sb3:before {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-left: 10px solid transparent;
-  border-right: 10px solid darkgray;
-  border-top: 10px solid darkgray;
-  border-bottom: 10px solid transparent;
-  right: 20px;
-  bottom: -23px;
-}
-
-.sb3:after {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-left: 10px solid transparent;
-  border-right: 10px solid #fff;
-  border-top: 10px solid #fff;
-  border-bottom: 10px solid transparent;
-  right: 24px;
-  bottom: -13px;
-}
-
-.testimonial_name3 {
-  padding-top: 30px;
-  padding-bottom: 10px;
-  font-weight: bolder;
-}
-
-.testimonial_title4{
-  grid-column: 3;
-  grid-row: 1;
-  font-size: 20px;
-  width: 300px;
-  margin: 50px auto;
-  border: 4px solid #2773a9;
-  padding: 20px;
-  text-align: center;
-  color: black;
-  position: relative;
-  border-radius: 5%;
-}
-
-.sb4:before {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-left: 10px solid transparent;
-  border-right: 10px solid #2773a9;
-  border-top: 10px solid #2773a9;
-  border-bottom: 10px solid transparent;
-  left: -21px;
-  top: 6px;
-}
-
-.sb4:after {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-left: 7px solid transparent;
-  border-right: 7px solid #fff;
-  border-top: 7px solid #fff;
-  border-bottom: 7px solid transparent;
-  left: -11px;
-  top: 10px;
-}
-
-.testimonial_name4 {
-  padding-top: 30px;
-  padding-bottom: 10px;
-  font-weight: bolder;
-}
 
 .contactus {
   background-color: #f1f1f1;
