--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -1,8 +1,14 @@
 form{
   display: grid;
-  grid-template-rows: repeat(4, 20%) 50% 20%;
-  padding-top: 5%;
+  grid-template-rows: repeat(5, 20%) 30% 20%;
+  /* padding-top: 5%; */
   font-size: 25px;
+}
+
+.contact_us_title {
+  grid-row: 1;
+  font-size: 50px;
+  font-weight: bolder;
 }
 
 /* .form-group {
@@ -23,13 +29,14 @@ form{
 
 .btn {
   padding: 3%;
-  width: 30%;
+  width: 20%;
   grid-row: 6;
   align-self: center;
   font-size: 20px;
   font-weight: bold;
   color: white;
   background-color: #34A392;
+  border-color: #34A392;
   border-radius: 4%;
   cursor: pointer;
 }
