--- a/client/src/components/Testimonial/Testimonial.css
+++ b/client/src/components/Testimonial/Testimonial.css
@@ -196,16 +196,18 @@
 }  */
 
 .testimonal_container {
-  padding: 3%;
+  padding: 2%;
   font-size: 20px;
 }
 
 .quotes_icon {
-  padding-left: 10%;
+  padding-left: 9%;
 }
 
 .testimonial_description {
   text-align: center;
+  padding-right: 8%;
+  padding-left: 8%;
 }
 
 .testimonial_name {
