--- a/client/src/components/Navigation/Navbar.css
+++ b/client/src/components/Navigation/Navbar.css
@@ -1,9 +1,10 @@
 #nav-bar {
   display: flex;
   justify-content: center;
-  font-size: 24px; 
+  font-size: 25px; 
   text-decoration: none;
   font-family: 'Yantramanav', sans-serif;
+  font-weight: bold;
   background-color: #F1F1F1;
 }
 
@@ -25,4 +26,29 @@
   cursor: pointer;
   padding-left: 3%;
   padding-right: 3%;
+}
+
+.text a {
+ color: black !important;
+}
+
+.dropdown-menu.show  {
+  display: grid !important;
+  grid-template-columns: 1fr 1fr !important;
+  font-size: 20px !important;
+}
+
+.dropdown_left {
+  grid-column: 1;
+  padding-left: 12%;
+  padding-right: 10%;
+}
+
+.dropdown_right {
+  grid-column: 2;
+  padding-right: 25%;
+}
+
+.dropdown_header {
+  font-weight: bolder !important;
 }
