--- a/client/src/components/NavbarDropDown/NavbarDropDown.css
+++ b/client/src/components/NavbarDropDown/NavbarDropDown.css
@@ -14,13 +14,43 @@
   display: grid;
   grid-template-columns: auto auto;
   font-family: 'Yantramanav', sans-serif;
-  font-weight: thin;
+  font-weight: 200;
+  background-color: #2773a9;
+  position: absolute;
+  z-index: 999;
+  color: white; 
+  border-radius: 6px;
+  margin-top: 10px;
 }
 
-.patient_list {
-  list-style: none;
+.list_container {
+  overflow: visible;
 }
 
-.surgical_list {
+.list_column {
   list-style: none;
+  padding-left: 0;
+  align-items: flex-start !important;
+  flex-direction: column;
+
 }
+
+.list_header {
+  font-weight: 900;
+  width: 20rem;
+  padding: 15px !important;
+  text-decoration: underline;
+}
+
+.list_item {
+  cursor: pointer;
+  padding: 15px !important;
+  transition: background-color ease-in-out 300ms, color ease-in-out 300ms !important;
+  width: 20rem;
+}
+
+.list_item:hover {
+  background-color: white;
+  color: #2773a9; 
+}
+
