--- a/src/components/Navigation/Navbar.css
+++ b/src/components/Navigation/Navbar.css
@@ -6,14 +6,14 @@
   font-size: 25px; 
   font-family: 'Yantramanav', sans-serif;
   font-weight: bold;
-  padding: 4%;
+  padding-top: 4%;
+  padding-bottom: 4%;
 }
 
 .toolbar_nav {
   display: flex;
   height: 100%;
   align-items: center;
-  justify-content: center;
 }
 
 
