--- a/src/components/Navigation/Navbar.css
+++ b/src/components/Navigation/Navbar.css
@@ -16,15 +16,24 @@
   align-items: center;
 }
 
+.toolbar_logo {
+  padding-left: 3%;
+}
+
+.toolbar_nav_items {
+  display: flex;
+}
 
 .toolbar_nav_items ul {
-  list-style: none;
+  
   display: flex;
   align-items: center;
 }
 
 .toolbar_nav_items li {
   padding: 0 1rem;
+  list-style: none;
+  display: flex;
 }
 
 .toolbar_nav_items ul li a {
@@ -34,7 +43,7 @@
 
 .toolbar_nav_items a:hover,
 .toolbar_nav_items a:active {
-  color: #2773a9;
+  color: #472a8e;
 }
 
 
