--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -45,21 +45,37 @@
   height: 120px;
 }
 
+.icon_services_container {
+  width: 100%;
+  height: 100%;
+  /* position: relative; */
+}
+
+/* .icon_container .services_container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+} */
+
 .icon_container {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  grid-gap: 4%;
+  justify-items: center;
+  margin-top: 3%;
+  margin-bottom: -7%;
+  margin-left: 2%;
 }
 
 .services_icon {
-  grid-row: 1;
-  justify-self: center;
-  background-color:#ccc5c5;
+  background-color:#e0dfde;
   border-radius: 50%;
-  height: 9rem;
-  width: 9rem;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  z-index: 10;
+  position: relative;
+  height: 8rem;
+  width: 8rem;
 }
 
 .services_container {
@@ -70,11 +86,35 @@
   font-family: 'Quicksand', sans-serif;
 }
 
+.services_sub_container1 {
+  display: grid;
+  grid-template-rows: 20% 50%;
+  padding-top: 15%;
+  border-style: solid;
+  border-color: #8974b6;
+  border-radius: 5%;
+}
+
+.services_title1 {
+  grid-row: 1;
+  justify-self: center;
+  font-size: 40px;
+  color: #8974b6;
+}
+
+.services_description1 {
+  grid-row: 2;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 100;
+}
+
 .services_sub_container2 {
   display: grid;
-  grid-template-rows: 30% 50%;
+  grid-template-rows: 20% 50%;
+  row-gap: 3%;
   padding: 15%;
-  padding-bottom: 35%;
+  border-radius: 2%;
   border-style: solid;
   border-color: #8974b6;
   border-radius: 5%;
@@ -83,30 +123,31 @@
 .services_title2 {
   grid-row: 1;
   justify-self: center;
-  align-self: center;
-  font-size: 35px;
-  font-weight: bold;
+  font-size: 40px;
   color: #8974b6;
-  text-align: center;
 }
 
-.services_description2 ul {
+.services_description2 {
+  font-weight: 100;
   grid-row: 2;
-  justify-self: center;
+}
+
+.services_description21 {
   font-size: 25px;
-  list-style: none;
   text-align: center;
 }
 
-.services_description2 ul li {
-  padding-bottom: 1%;
+.services_description22 {
+  font-size: 25px;
+  text-align: center;
+  padding-top: 3%;
 }
 
 .services_sub_container3 {
   display: grid;
-  grid-template-rows: 40% 50%;
+  grid-template-rows: 20% 50%;
+  row-gap: 3%;
   padding: 15%;
-  padding-bottom: 35%;
   border-radius: 2%;
   border-style: solid;
   border-color: #8974b6;
@@ -116,55 +157,20 @@
 .services_title3 {
   grid-row: 1;
   justify-self: center;
-  align-self: center;
-  font-size: 30px;
-  font-weight: bold;
+  font-size: 40px;
   color: #8974b6;
 }
 
-.services_description3 ul {
+.services_description3 {
   grid-row: 2;
-  justify-self: center;
-  font-size: 20px;
-  list-style: none;
   text-align: center;
-}
-
-.services_description3 ul li {
-  padding: 2%;
-}
-
-.services_sub_container4 {
-  display: grid;
-  grid-template-rows: 40% 50%;
-  padding: 15%;
-  padding-bottom: 35%;
-  border-radius: 2%;
-  border-style: solid;
-  border-color: #8974b6;
-  border-radius: 5%;
-}
-
-
-.services_title4 {
-  grid-row: 1;
-  justify-self: center;
-  align-self: center;
-  font-size: 30px;
-  font-weight: bold;
-  color: #8974b6;
-}
-
-.services_description4 {
-  grid-row: 2;
-  justify-self: center;
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: 100;
 }
 
 .certified_container {
   display: grid;
   grid-template-columns: auto auto;
-  font-family: 'Yantramanav', sans-serif;
 }
 
 .certified_mini_container1 {
