--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -1,22 +1,24 @@
 
 .testimonal_container {
   padding: 2%;
-  font-size: 20px;
+  font-size: 30px;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .testimonial_description {
   text-align: center;
-  padding-right: 8%;
-  padding-left: 8%;
+  padding-right: 23%;
+  padding-left: 23%;
 }
 
 .testimonial_name {
-  text-align: center;
   font-weight: bold;
   padding-top: 1%;
+  padding-left: 13%;
 }
 
 .testimonial_location {
-  text-align: center;
+  padding-left: 13%;
+  font-weight: bold;
 }
 
