--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -46,7 +46,7 @@
 }
 
 .intro_iso {
-  height: 120px;
+  height: 170px;
 }
 
 .icon_services_container {
@@ -96,6 +96,7 @@
   justify-self: center;
   font-size: 40px;
   color: #8974b6;
+  font-weight: bold;
 }
 
 .services_description1 {
@@ -121,6 +122,7 @@
   justify-self: center;
   font-size: 40px;
   color: #8974b6;
+  font-weight: bold;
 }
 
 .services_description2 {
@@ -155,6 +157,7 @@
   justify-self: center;
   font-size: 40px;
   color: #8974b6;
+  font-weight: bold;
 }
 
 .services_description3 {
