--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,7 +1,142 @@
 .about_title_container {
   background: linear-gradient(0deg, #8974b6,rgb(2, 28, 51));
   padding-top: 13%;
-  padding-bottom: 10%;
+  padding-bottom: 9%;
   text-align: center;
   color: white;
+}
+
+.about_title {
+  font-size: 70px;
+}
+
+.about_description {
+  font-size: 50px;
+}
+
+.about_us_container {
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 6%;
+}
+
+.about_us_img_container {
+  grid-column: 1;
+  justify-self: center;
+}
+
+.about_us_img {
+  width: 80%;
+  justify-self: center;
+  box-shadow: 0 0 7px -1px;
+  border-radius: 3px;
+}
+
+.about_us_description_container {
+  grid-column: 2;
+}
+
+.about_us_title {
+  font-size: 50px;
+  color: #8974b6;
+  font-weight: bold;
+}
+
+.about_us_description {
+  font-size: 30px;
+}
+
+.capabilites_title {
+  font-size: 50px;
+  color: #8974b6;
+  font-weight: bold;
+  padding-left: 6%;
+}
+
+.capabilites_line {
+  border-bottom: solid;
+  border-width: thin;
+  border-color: black;
+  width: 85%;
+  margin-left: 6%;
+}
+
+.capabilites_num_container {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  margin-left: 6%;
+  margin-top: 3%;
+}
+
+.capabilities_experts_container {
+  grid-column: 1;
+  display: grid;
+  grid-template-rows: 60% 40%;
+  text-align: center;
+  background-color: #8974b6;
+  padding-top: 7%;
+  padding-bottom: 8%;
+  margin-right: 5%;
+  box-shadow: 0 0 7px -1px;
+  border-radius: 3px;
+}
+
+.experts_num {
+  grid-row: 1;
+  font-size: 110px;
+  font-weight: bolder;
+}
+
+.experts_title {
+  grid-row: 2;
+  font-size: 60px;
+}
+
+.capabilities_experience_container {
+  grid-column: 2;
+  display: grid;
+  grid-template-rows: 50% 40%;
+  text-align: center;
+  background-color: darkgray;
+  padding-top: 7%;
+  padding-bottom: 8%;
+  margin-right: 5%;
+  box-shadow: 0 0 7px -1px;
+  border-radius: 3px;
+}
+
+.experience_num {
+  grid-row: 1;
+  font-size: 110px;
+  font-weight: bolder;
+}
+
+.experience_title {
+  grid-row: 2;
+  font-size: 60px;
+}
+
+.capabilities_clients_container {
+  grid-column: 3;
+  display: grid;
+  grid-template-rows: 60% 40%;
+  text-align: center;
+  background-color: #5d33bf;
+  padding-top: 7%;
+  padding-bottom: 8%;
+  box-shadow: 0 0 7px -1px;
+  border-radius: 3px;
+}
+
+.clients_num {
+  grid-row: 1;
+  font-size: 110px;
+  font-weight: bolder;
+  color: #F1F1F1;
+}
+
+.clients_title {
+  grid-row: 2;
+  font-size: 60px;
+  color: #F1F1F1;
 }
