--- a/src/pages/Career/Career.css
+++ b/src/pages/Career/Career.css
@@ -21,10 +21,9 @@
 .career_available {
   display: grid;
   grid-template-columns: repeat(3, 30%);
-  /* margin: 3rem;
-  margin-left: 7rem; */
   margin-left: 6%;
   margin-top: 3%;
+  margin-bottom: 3%;
   gap: 2rem;
 }
 
