--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,16 +1,9 @@
 .footer_container {
-  display: flex;
-  flex-direction: column;
+  text-align: center;
   padding: 3%;
-  font-family: 'Yantramanav', sans-serif;
   font-size: 20px;
 }
 
-.footer_email {
-  text-align: center;
-  padding-bottom: 1%;
-}
-
-.footer_phone {
-  text-align: center;
+.linkedin_logo {
+  width: 3rem;
 }
