--- a/src/pages/Career/Career.css
+++ b/src/pages/Career/Career.css
@@ -15,25 +15,18 @@
   font-size: 60px;
   color: #8974b6;
   font-weight: bold;
-  margin: 2rem;
+  margin: 3rem;
 }
 
 .career_available {
-  display: grid;
-  grid-template-columns: repeat(3, 30%);
-  margin-left: 6%;
-  margin-top: 3%;
-  margin-bottom: 3%;
-  gap: 2rem;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .position_container1 {
-  grid-column: 1;
-  display: grid;
-  grid-template-rows: 50% 40%;
   background-color: darkgray;
   box-shadow: 0 0 7px -1px;
-  padding: 5%;
+  padding: 2%;
 }
 
 .position_icon_container {
@@ -58,20 +51,8 @@
   grid-column: 2;
 }
 
-.position_container2 {
-  grid-column: 2;
-  display: grid;
-  grid-template-rows: 50% 40%;
-  background-color: darkgray;
-  box-shadow: 0 0 7px -1px;
-  padding: 2rem;
-}
-
 .position_container3 {
-  grid-column: 3;
-  display: grid;
-  grid-template-rows: 50% 40%;
   background-color: darkgray;
   box-shadow: 0 0 7px -1px;
-  padding: 5%;
+  padding: 2% 3%;
 }
