--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,13 +1,14 @@
-form{
-  display: grid;
-  grid-template-rows: repeat(5, 20%) 30% 20%;
-  font-size: 25px;
+form {
+  margin: 5rem 2rem;
 }
 
 .contact_us_title {
-  grid-row: 1;
   font-size: 50px;
   font-weight: bolder;
+}
+
+.form_inputs {
+  margin: 3rem 0;
 }
 
 #name {
