removed fedex section from all pages, updated power and ultrasound pages

--- a/src/components/NavbarDropDown/NavbarDropDown.css
+++ b/src/components/NavbarDropDown/NavbarDropDown.css
@@ -21,7 +21,7 @@ button:focus {
   align-items: flex-start;
   justify-content: flex-start;
   font-weight: 200;
-  /* background-color :#472a8e; */
+  background-color :#472a8e;
   position: absolute;
   z-index: 999;
   color: white; 
@@ -33,12 +33,12 @@ button:focus {
   overflow: visible;
 }
 
-/* .list_column {
+.list_column {
   list-style: none;
   padding-left: 0;
   align-items: flex-start !important;
   flex-direction: column;
-} */
+}
 
 .list_header {
   font-weight: 900;
@@ -52,7 +52,7 @@ button:focus {
   padding: 15px !important;
   transition: background-color ease-in-out 300ms, color ease-in-out 300ms !important;
   width: 20rem;
-  /* background-color: #472a8e; */
+  background-color: #472a8e;
   color: white;
   border: transparent;
   text-align: left;
