--- a/src/surgicalEquipment/UltrasoundProbe/UltrasoundProbe.css
+++ b/src/surgicalEquipment/UltrasoundProbe/UltrasoundProbe.css
@@ -25,7 +25,21 @@
   text-align: center;
 }
 
+.advan_title.ultra {
+  font-size: 40px;
+  color: #8974b6;
+  font-weight: bold;
+  text-align: center;
+}
+
 .ultra_list ul {
+  list-style: none;
+  text-align: center;
+  padding-left: 0;
+  font-size: 30px;
+}
+
+.advan_list.ultra ul {
   list-style: none;
   text-align: center;
   padding-left: 0;
@@ -40,7 +54,7 @@
   grid-area: 1 / 2 / 2 / 3; 
 }
 
-.ultra_advan_container {
+.advan_container.ultra {
   grid-area: 1 / 3 / 2 / 4;
 }
 
