updated dental handpieces with pics and info

--- a/src/surgicalEquipment/RigidEndoscope/RigidEndoscope.css
+++ b/src/surgicalEquipment/RigidEndoscope/RigidEndoscope.css
@@ -18,7 +18,7 @@
 
 .rigid_repair_services_container {
   text-align: center;
-  padding: 5%;
+  padding: 3% 5%;
 }
 
 .rigid_repair_services_title {
