added carousel to header, images need to be changed

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,9 @@
 .home_main_image {
   background-position: center;
   background-size: cover;
-  background-color: #5d33bf; 
-  width: 100%;
-  height: 100vh;
+  /* background-color: #5d33bf;  */
+  /* width: 100%; */
+  /* height: 100vh; */
 }
 
 .home_intro_text {
